# ResumeForge-AI

./: .env.example  .gitignore  Krishna_Annavaram_Resume (3).docx  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
careeros/: __init__.py  config.py  dependencies.py  main.py
careeros/agents/: cover_letter_writer_agent.py  critic_agent.py  feedback_interpreter_agent.py  gap_analyzer_agent.py  graph.py  jd_parser_agent.py  profile_loader_agent.py  resume_writer_agent.py  retrieval_agent.py  rewrite_planner_agent.py  state.py
careeros/api/: router.py
careeros/api/auth/: router.py  (+2 more)
careeros/core/: exceptions.py  logging.py  vault_health.py
careeros/database/: base.py  connection.py
careeros/ingestion/: docx_parser.py  embedder.py  pdf_parser.py  pipeline.py  resume_extractor.py
careeros/llm/: client.py  router.py
careeros/retrieval/: evidence_ranker.py  semantic_search.py  session_search.py  structured_search.py
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
prism/: .env.example  .gitignore  Krishna_Annavaram_Resume.docx  README.md  requirements.txt  run.py
prism/core/: agents.py  graph.py  resume_parser.py  state.py  tracker.py  vector_store.py
prism/credentials/: README.md
prism/tests/: test_parser.py  test_routing.py  test_tracker.py
tests/: conftest.py
tests/test_agents/: test_gap_analyzer.py  test_jd_parser.py
tests/test_api/: test_auth.py  test_tracker.py  test_vault.py
tests/test_retrieval/: test_evidence_ranker.py
(+64 files in other folders)
