[project]
name = "careeros"
version = "1.0.0"
description = "CareerOS — Production-Grade AI Career Operating System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.37.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "aiofiles>=23.0.0",
    "python-dateutil>=2.9.0",
    "langchain-anthropic>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["careeros"]
